--- a/backend/variables.env
+++ b/backend/variables.env
@@ -8,3 +8,5 @@ PORT=8000
 MAP_KEY=AIzaSyD9ycobB5RiavbXpJBo0Muz2komaqqvGv0
 SECRET=snickers
 KEY=sweetsesh
+EXPIRATION_TOKEN = '48h'
+SEED_AUTHENTICATION = process.env.SEED_AUTHENTICATION || 'seed-development'
