--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.12",
+    "mongoose-paginate-v2": "^1.3.14",
     "mongoose-unique-validator": "^2.0.3",
     "passport": "^0.4.1",
     "slugs": "^0.1.3"
